[package]
name = "jetsam"
version = "0.1.0"
authors = ["Alexander Vo <randomcivvy0121@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = "0.7.0"
swc_ecma_ast = "0.26.0"
swc_ecma_parser = "0.31.0"
swc_atoms = "0.2.2"
swc_ecma_visit = "0.11.0"
clap = "2.33.0"
indexmap = "1.3.2"
serde_json = "1.0.44"
derive_builder = "0.9.0"
